feat: ultimate customization of jvm args, system props and env vars of jvm