@@ -16,6 +16,22 @@ class GatlingPluginExtension implements JvmConfigurable {
 
     static final Closure DEFAULT_SIMULATIONS = { include("**/*Simulation*.scala") }
 
+    static final Set<String> DEFAULT_JVM_ARGS = [
+        '-server',
+        '-Xmx1G',
+        '-XX:+HeapDumpOnOutOfMemoryError',
+        '-XX:+UseG1GC',
+        '-XX:MaxGCPauseMillis=30',
+        '-XX:G1HeapRegionSize=16m',
+        '-XX:InitiatingHeapOccupancyPercent=75',
+        '-XX:+ParallelRefProcEnabled',
+        '-XX:+PerfDisableSharedMem',
+        '-XX:+AggressiveOpts',
+        '-XX:+OptimizeStringConcat'
+    ].asImmutable()
+
+    static final Map<String, Object> DEFAULT_SYSTEM_PROPS = ["java.net.preferIPv4Stack": true, "java.net.preferIPv6Addresses": false].asImmutable()
+
     def toolVersion = GATLING_TOOL_VERSION
 
     def scalaVersion = SCALA_VERSION
